--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <!-- Subheading -->
                 <p class="hero-description">
-                    業界特有のリスクを理解した上で、長期運用を前提とした安定的な決済環境をご提供致します。
+                    業界特有のリスクを理解した上で、長期運用を前提とした安定的な決済環境をご提供致します。<br>月4回の入金サイクル・手数料6.0%〜
                 </p>
 
                 <!-- Feature Badges -->
@@ -142,7 +142,7 @@
                     <div class="strength-icon-box">
                         <img src="./assets/images/service-icon-4.png" alt="スピード導入" class="strength-icon">
                     </div>
-                    <h3 class="strength-card-title">圧倒的なスピード導入</h3>
+                    <h3 class="strength-card-title">圧倒的なスピード導入<br>〜最短3日〜</h3>
                     <p class="strength-card-subtitle">長期運用を前提としたサポート体制</p>
                     <p class="strength-card-description">
                         導入後の安定運用を重視し、トラブル防止・継続利用を前提とした管理・サポートを行っています。
@@ -194,7 +194,7 @@
                         <div class="feature-content">
                             <h3 class="feature-title">凍結・未入金リスクを構造で回避</h3>
                             <p class="feature-description">
-                                「売上があるのに入金されない」という事態は、決済構造の弱さが原因であることが大半です。
+                                「売上があるのに入金されない」という事態は、決済構造の弱さが原因であることが大半です。OTLでは資金フローを明確化し、理不尽な資金停止リスクを抑えています。
                             </p>
                         </div>
                     </div>
@@ -415,12 +415,12 @@
                     <div class="company-details">
                         <div class="company-detail-item">
                             <h4 class="company-detail-label">住所</h4>
-                            <p class="company-detail-value">〒100-0014 東京都中央区日本橋茅場町１丁目２番１８号 日本ビルディング別館９階</p>
+                            <p class="company-detail-value">〒103-0025 東京都中央区日本橋茅場町１丁目２番１８号 日本ビルディング別館９階</p>
                         </div>
 
                         <div class="company-detail-item">
                             <h4 class="company-detail-label">営業時間</h4>
-                            <p class="company-detail-value">平日 午前９時～午後６時 / 土曜 午前９時～正午 / 日曜 予約制</p>
+                            <p class="company-detail-value">平日 午前９時～午後６時</p>
                         </div>
                     </div>
 
