--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <title>on the line JAPAN株式会社 | クレジットカード決済代行</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
 </head>
 <body>
     <!-- Header Navigation -->
